# learn-rust

./: Cargo.toml
foo/: Cargo.toml
foo/src/: main.rs
plonky2-example/: Cargo.toml
plonky2-example/src/: main.rs
src/: casting.rs  enum.rs  flow.rs  hello.rs  main.rs  memory.rs  print.rs
vanity-address/: Cargo.toml
vanity-address/src/: main.rs
