[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "print"
path = "src/print.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "flow"
path = "src/flow.rs"

[[bin]]
name = "memory"
path = "src/memory.rs"

